maybe fixing overflow x

--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 * {
   margin: 0px;
   padding: 0px;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
 }
 html {
   scroll-behavior: smooth;
-  overflow-x: hidden;
+}
 
+.site {
+    overflow-x: hidden;
 }
 #about {
   /* height: 50%; */
@@ -242,7 +244,6 @@ justify-content: space-evenly;
     overflow-x: hidden;
   }
   #bg-img {
-    overflow-x: hidden;
 
     background: url(../img/background.jpg);
     background-attachment: fixed;
